# FastApi1

./: Dockerfile  README.md  main.py  pyproject.toml
